APB-384 reads only hexvalues used as icons and declares font from Fontawesome module and icon class in css, removes loading complete Fontawesome css, fixes icons app_align_right wrong character and app_log syntax error, fixes css selector for icons in menu 8 and font height in menu 10 in admin app, fixes stat row 2 width css in app2 and stat row 1 width in common css, fixes icon sizes app2 settings image

--- a/apps/common/css/common.css
+++ b/apps/common/css/common.css
@@ -163,6 +163,31 @@
 									'Noto Sans KR', 'Noto Sans SC', 'Noto Sans TC', 'Noto Sans HK',
 									var(--global_font_languages_1), var(--global_font_symbols), var(--global_font_languages_2);
 }
+/*Fontawesome icons*/
+@font-face {
+	font-family: "Font Awesome 6 Free";
+	font-style: normal;
+	font-weight: 400;
+	font-display: block;
+	src: url(/common/modules/fontawesome/webfonts/fa-regular-400.woff2) format("woff2"), 
+		 url(/common/modules/fontawesome/webfonts/fa-regular-400.ttf) format("truetype")
+}
+@font-face {
+	font-family: "Font Awesome 6 Free";
+	font-style: normal;
+	font-weight: 900;
+	font-display: block;
+	src: url(/common/modules/fontawesome/webfonts/fa-solid-900.woff2) format("woff2"), 
+		 url(/common/modules/fontawesome/webfonts/fa-solid-900.ttf) format("truetype")
+}
+/*use this class to display icons*/
+.common_icon {
+	font-family: "Font Awesome 6 Free";
+	font-weight: 900;
+	font-display: swap;
+	font-style: normal;
+	display: inline-block;
+}  
 
 /*default font*/
 body
